--- a/README.rdoc
+++ b/README.rdoc
@@ -23,7 +23,8 @@ Things you may want to cover:
 Deployed to Heroku[https://project-longitude.herokuapp.com/]
 
 * ...
-
+ 
+ Notes: fix funky table on all articles
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
